<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appbg"
        android:orientation="vertical">
        <include layout="@layout/layout_top_bar"
            android:id="@+id/topBar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/welcome_to_the_customer_servide_center"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="#333333"/>
        <LinearLayout
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_36sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icon_zl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_item_support"
                android:text="@string/zalo"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_1sdp"
                android:paddingVertical="@dimen/_5sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_36sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icon_telegram"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_item_support"
                android:text="@string/telegram"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_1sdp"
                android:paddingVertical="@dimen/_5sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_36sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icon_fb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_item_support"
                android:text="@string/facebook"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_1sdp"
                android:paddingVertical="@dimen/_5sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_36sdp">
            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:src="@drawable/icon_mes"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_item_support"
                android:text="@string/chat_ngay"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_1sdp"
                android:paddingVertical="@dimen/_5sdp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:text="@string/contact_now"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/shape_bg_btn"
            android:id="@+id/contact"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/working_time_in_time_zone_8_will_try_to_answer_in_1_hour_other_time_zone_will_reply_in_24_hours"
            android:textColor="#090909"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_12sdp"/>
    </LinearLayout>
</layout>