<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appbg">
        <LinearLayout
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gi_i_thi_u"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                android:textFontWeight="900"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/_28sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:textSize="@dimen/_18sdp"
                android:background="@drawable/info_btn_svg"
                android:layout_marginVertical="@dimen/_4sdp"
                android:id="@+id/textGt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_o_m_t"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                android:textFontWeight="900"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/_28sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:textSize="@dimen/_18sdp"
                android:background="@drawable/info_btn_svg"
                android:layout_marginVertical="@dimen/_4sdp"
                android:id="@+id/textBm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_tr"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                android:textFontWeight="900"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/_28sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:textSize="@dimen/_18sdp"
                android:background="@drawable/info_btn_svg"
                android:layout_marginVertical="@dimen/_4sdp"
                android:id="@+id/textHt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_bold"
                android:textFontWeight="900"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingHorizontal="@dimen/_28sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:textSize="@dimen/_18sdp"
                android:background="@drawable/info_btn_svg"
                android:layout_marginVertical="@dimen/_4sdp"
                android:id="@+id/textExit"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>